# cookbook_rag

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: my_rag.ipynb
src/cookbook_rag/: config.py  embed.py  ingest.py  partitioner.py  prompt.py  rag.py  vector_store.py
